unused event removed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="scss/main.css">
 </head>
 
-<body onclick="showTarget(event)">
+<body>
 
 <h1 align="center">Drag and drop to reorder images</h1>
 
